--- a/mediaQuery.css
+++ b/mediaQuery.css
@@ -117,6 +117,10 @@
     font-size: 0.8rem;
   }
 
+  .pic-template-card :nth-child(2){
+    margin-top: 0.4rem;
+  }
+
   .pic-template:hover{
     transform: scale(1.1) ;  
 }
