--- a/mediaQuery.css
+++ b/mediaQuery.css
@@ -113,6 +113,10 @@
   }  
 
   .pic-template-card{
+    width: 65%;
+    height: 60%;
+    left: 50%;
+    top: 80%;
     font-size: 0.8rem;
   }
 
